--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pixelarticons": "^1.8.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.1",
     "simple-icons": "^16.6.1"
   },
   "devDependencies": {
