--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.2.3",
     "resend": "^6.9.1",
     "simple-icons": "^16.6.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
